[package]
name = "nappgui-macros"
version = "0.2.0"
edition = "2021"
authors = ["felixmaker"]
description = "Macro helper for nappgui crate"
license = "MIT"
readme = "README.md"
repository = "https://github.com/felixmaker/nappgui-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
