[package]
name = "nappgui-sys"
version = "0.2.0"
edition = "2021"
authors = ["felixmaker"]
description = "Rust raw bindings to NAppGUI"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/felixmaker/nappgui-rs"
exclude = ["nappgui_src/demo"]
categories = ["gui"]

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"

[features]
default = []
webview = []
